// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrainingTab should render 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-342"
  >
    <div
      class="makeStyles-filterActionsContainer-353 makeStyles-filterActionsContainerPadding-355"
    >
      <div
        class="MuiBox-root MuiBox-root-408 makeStyles-filterStatusContainer-356"
      >
        <div
          class="MuiBox-root MuiBox-root-409 makeStyles-filterStatusContainer-356 makeStyles-autocompleteFilterStatus-373"
        >
          <div
            class="makeStyles-floatingFilterWrapper-362 makeStyles-filterWrapper-361 makeStyles-buttonContainer-411 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-363"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-371"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-365"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-383 makeStyles-primaryButtonLarge-385 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-training-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Add Training
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Type
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-415"
          data-testid="training-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test training
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            May 19, 2020
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Alfred Henry
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            TD 18 NG
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-416"
              href="/projects/detail/9164e4c4-6521-47bb-97fd-c75ac02b2cf2"
              title="View Project detail"
            >
              Project Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          >
            <span
              class="makeStyles-invoiceRowButton-418"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <div
                class="MuiBox-root MuiBox-root-420 makeStyles-filterStatusContainer-356 buttonMenuContainer"
              >
                <div
                  class="makeStyles-filterWrapper-361 buttonMenuWrapper"
                >
                  <span
                    class=""
                    data-testid="controlled-button"
                    tabindex="-1"
                  >
                    <button
                      aria-controls="false"
                      aria-haspopup="true"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-invoiceActionsButton-419 MuiButton-containedPrimary"
                      data-testid="popover-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        
                        <span
                          class="MuiButton-endIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            class="makeStyles-invoiceIconDisabled-417"
                          >
                            three-dots.svg
                          </svg>
                        </span>
                      </span>
                    </button>
                  </span>
                  <span
                    class=""
                  >
                    <div
                      class="makeStyles-iconInactive-421"
                      data-testid="popover-wrapper"
                    >
                      
                    </div>
                  </span>
                </div>
              </div>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-425"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`TrainingTab should render detail loading 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-tableWrapper-749"
  >
    <div
      class="makeStyles-filterActionsContainer-760 makeStyles-filterActionsContainerPadding-762"
    >
      <div
        class="MuiBox-root MuiBox-root-815 makeStyles-filterStatusContainer-763"
      >
        <div
          class="MuiBox-root MuiBox-root-816 makeStyles-filterStatusContainer-763 makeStyles-autocompleteFilterStatus-780"
        >
          <div
            class="makeStyles-floatingFilterWrapper-769 makeStyles-filterWrapper-768 makeStyles-buttonContainer-818 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-770"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-778"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-772"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-790 makeStyles-primaryButtonLarge-792 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-training-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Add Training
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Type
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-822"
          data-testid="training-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test training
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            May 19, 2020
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Alfred Henry
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            TD 18 NG
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-823"
              href="/projects/detail/9164e4c4-6521-47bb-97fd-c75ac02b2cf2"
              title="View Project detail"
            >
              Project Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          >
            <span
              class="makeStyles-invoiceRowButton-825"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <div
                class="MuiBox-root MuiBox-root-827 makeStyles-filterStatusContainer-763 buttonMenuContainer"
              >
                <div
                  class="makeStyles-filterWrapper-768 buttonMenuWrapper"
                >
                  <span
                    class=""
                    data-testid="controlled-button"
                    tabindex="-1"
                  >
                    <button
                      aria-controls="false"
                      aria-haspopup="true"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-invoiceActionsButton-826 MuiButton-containedPrimary"
                      data-testid="popover-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        
                        <span
                          class="MuiButton-endIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            class="makeStyles-invoiceIconDisabled-824"
                          >
                            three-dots.svg
                          </svg>
                        </span>
                      </span>
                    </button>
                  </span>
                  <span
                    class=""
                  >
                    <div
                      class="makeStyles-iconInactive-828"
                      data-testid="popover-wrapper"
                    >
                      
                    </div>
                  </span>
                </div>
              </div>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-832"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`TrainingTab should render loading 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-621"
  >
    <div
      class="makeStyles-filterActionsContainer-632 makeStyles-filterActionsContainerPadding-634"
    >
      <div
        class="MuiBox-root MuiBox-root-687 makeStyles-filterStatusContainer-635"
      >
        <div
          class="MuiBox-root MuiBox-root-688 makeStyles-filterStatusContainer-635 makeStyles-autocompleteFilterStatus-652"
        >
          <div
            class="makeStyles-floatingFilterWrapper-641 makeStyles-filterWrapper-640 makeStyles-buttonContainer-690 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-642"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-650"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-644"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-662 makeStyles-primaryButtonLarge-664 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-training-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Add Training
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    Loading...
  </div>
</div>
`;

exports[`TrainingTab should render with secondary values 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-481"
  >
    <div
      class="makeStyles-filterActionsContainer-492 makeStyles-filterActionsContainerPadding-494"
    >
      <div
        class="MuiBox-root MuiBox-root-547 makeStyles-filterStatusContainer-495"
      >
        <div
          class="MuiBox-root MuiBox-root-548 makeStyles-filterStatusContainer-495 makeStyles-autocompleteFilterStatus-512"
        >
          <div
            class="makeStyles-floatingFilterWrapper-501 makeStyles-filterWrapper-500 makeStyles-buttonContainer-550 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-502"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-510"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-504"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-522 makeStyles-primaryButtonLarge-524 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-training-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Add Training
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Type
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-554"
          data-testid="training-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Other training
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Relf Harold
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            NF 13 CF
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-555"
              href="/projects/detail/8aa1c4c4-6521-47bb-27fd-af5ac02b2cd8"
              title="View Project detail"
            >
              Project Name 2
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          >
            <span
              class="makeStyles-invoiceRowButton-557"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <div
                class="MuiBox-root MuiBox-root-559 makeStyles-filterStatusContainer-495 buttonMenuContainer"
              >
                <div
                  class="makeStyles-filterWrapper-500 buttonMenuWrapper"
                >
                  <span
                    class=""
                    data-testid="controlled-button"
                    tabindex="-1"
                  >
                    <button
                      aria-controls="false"
                      aria-haspopup="true"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-invoiceActionsButton-558 MuiButton-containedPrimary"
                      data-testid="popover-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        
                        <span
                          class="MuiButton-endIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            class="makeStyles-invoiceIconDisabled-556"
                          >
                            three-dots.svg
                          </svg>
                        </span>
                      </span>
                    </button>
                  </span>
                  <span
                    class=""
                  >
                    <div
                      class="makeStyles-iconInactive-560"
                      data-testid="popover-wrapper"
                    >
                      
                    </div>
                  </span>
                </div>
              </div>
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-554"
          data-testid="training-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Other training
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Joe Dawson
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-555"
              href="/projects/detail/8aa1c4c4-6521-47bb-27fd-af5ac02b2cd8"
              title="View Project detail"
            >
              Project Name 2
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          >
            <span
              class="makeStyles-invoiceRowButton-557"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <div
                class="MuiBox-root MuiBox-root-564 makeStyles-filterStatusContainer-495 buttonMenuContainer"
              >
                <div
                  class="makeStyles-filterWrapper-500 buttonMenuWrapper"
                >
                  <span
                    class=""
                    data-testid="controlled-button"
                    tabindex="-1"
                  >
                    <button
                      aria-controls="false"
                      aria-haspopup="true"
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-invoiceActionsButton-558 MuiButton-containedPrimary"
                      data-testid="popover-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        
                        <span
                          class="MuiButton-endIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            class="makeStyles-invoiceIconDisabled-556"
                          >
                            three-dots.svg
                          </svg>
                        </span>
                      </span>
                    </button>
                  </span>
                  <span
                    class=""
                  >
                    <div
                      class="makeStyles-iconInactive-560"
                      data-testid="popover-wrapper"
                    >
                      
                    </div>
                  </span>
                </div>
              </div>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-565"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
